Updated the Review Page, Now it dynamically get the question from the table ReviewQuestion and render it. Added more tables to models.py for utilities.

--- a/mysite/myapp/templates/myapp/Create a new worked-out example.html
+++ b/mysite/myapp/templates/myapp/Create a new worked-out example.html
@@ -104,6 +104,7 @@
             </div>
         </div>
         <div class="center">
+            {% csrf_token %}
             <input type="submit" value="Cancel and Exit">
             <input type="submit" value="Save and Exit">
             <input type="submit" value="Save and Submit">
