--- a/mysite/myapp/static/myapp/style.css
+++ b/mysite/myapp/static/myapp/style.css
@@ -231,8 +231,8 @@ footer {
 .slider-container {
     width: 100%;
     max-width: 600px; /* Adjust the max-width as needed */
-    margin: auto;
     position: relative;
+    margin: auto auto 30px;
 }
 
 .slider {
