--- a/mysite/myapp/templates/myapp/Show_Review_Examples.html
+++ b/mysite/myapp/templates/myapp/Show_Review_Examples.html
@@ -20,151 +20,38 @@
 
     <div class="main-content">
         <div class="problem-context">
-            <h2>WEID: 11</h2>
+            <h2>WEID: {{ example.id }}</h2>
             <h3>Problem Context</h3>
-            <p>{{ example.project_context }}</p>
+            {{ example.project_context|linebreaks }} {# Allow line breaks #}
 
-            <div id="problem-description">
-                <h3>Problem Description</h3>
-                <p>{{ example.project_description }}</p>
-                <ol>
-                    <li><strong>Bestselling Books</strong>: Identify the top 5 bestselling books, including the book
-                        title,
-                        author, and the number of copies sold.
-                    </li>
-                    <li><strong>Valuable Customers</strong>: Determine the top 10 customers based on the total amount
-                        spent
-                        in the bookstore, including customer name and total expenditure.
-                    </li>
-                    <li><strong>Stock Optimization</strong>: List all books that have been sold out (stock level equals
-                        zero) but are still in high demand (have been sold at least once in the past month).
-                    </li>
-                    <li><strong>Customer Genre Preferences</strong>: For each customer, identify their most frequently
-                        purchased book genre.
-                    </li>
-                    <li><strong>Monthly Sales Trend</strong>: Calculate the month-over-month percentage change in total
-                        sales volume to identify trends.
-                    </li>
-                </ol>
-            </div>
-            <a href="" onclick="">Click here to download the SQL file for data insertion</a>
+            <h3>Problem Description</h3>
+            {{ example.project_description|linebreaks }}
+            <ol>
+                {% for question in example.questions.all %}  {# Access related questions #}
+                    <li>{{ question.text }}</li>
+                {% endfor %}
+            </ol>
 
-
-            <div class="table-style">
-                <h3>Data</h3>
-                <h4>Books Table</h4>
+            <h3>Data</h3>
+            {% for table in example.data_tables.all %}
+                <h4>{{ table.name }} Table</h4>
                 <table class="table-style">
                     <thead>
                     <tr>
                         <th>Column Name</th>
                         <th>Data Type</th>
-                        <th>Key Information</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>BookID</td>
-                        <td>INTEGER</td>
-                        <td>Primary Key</td>
-                    </tr>
-                    <tr>
-                        <td>Title</td>
-                        <td>VARCHAR</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Author</td>
-                        <td>VARCHAR</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Genre</td>
-                        <td>VARCHAR</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Price</td>
-                        <td>DECIMAL</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>StockLevel</td>
-                        <td>INTEGER</td>
-                        <td></td>
-                    </tr>
+                    {% for column in table.columns.all %}
+                        <tr>
+                            <td>{{ column.name }}</td>
+                            <td>{{ column.data_type }}</td>
+                        </tr>
+                    {% endfor %}
                     </tbody>
                 </table>
-                <h4>Sales Table</h4>
-                <table class="table-style">
-                    <thead>
-                    <tr>
-                        <th>Column Name</th>
-                        <th>Data Type</th>
-                        <th>Key Information</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>SaleID</td>
-                        <td>INTEGER</td>
-                        <td>Primary Key</td>
-                    </tr>
-                    <tr>
-                        <td>BookID</td>
-                        <td>INTEGER</td>
-                        <td>Foreign Key (Books)</td>
-                    </tr>
-                    <tr>
-                        <td>CustomerID</td>
-                        <td>INTEGER</td>
-                        <td>Foreign Key (Customers)</td>
-                    </tr>
-                    <tr>
-                        <td>Quantity</td>
-                        <td>INTEGER</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>SaleDate</td>
-                        <td>DATE</td>
-                        <td></td>
-                    </tr>
-                    </tbody>
-                </table>
-                <h4>Customers Table</h4>
-                <table class="table-style">
-                    <thead>
-                    <tr>
-                        <th>Column Name</th>
-                        <th>Data Type</th>
-                        <th>Key Information</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>CustomerID</td>
-                        <td>INTEGER</td>
-                        <td>Primary Key</td>
-                    </tr>
-                    <tr>
-                        <td>Name</td>
-                        <td>VARCHAR</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Email</td>
-                        <td>VARCHAR</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>JoinDate</td>
-                        <td>DATE</td>
-                        <td></td>
-                    </tr>
-                    </tbody>
-                </table>
-
-            </div>
+            {% endfor %}
         </div>
 
         <div class="reviewer-section">
@@ -182,7 +69,8 @@
                 {% for question in review_questions %}
                     {% if question.response_type == 'rating' %}
                         <div class="slider-container">
-                           {{ forloop.counter }}. <label for="criteria{{ forloop.counter }}" questionid="{{ question.id }}"> {{ question.question_text }}</label>
+                            {{ forloop.counter }}. <label for="criteria{{ forloop.counter }}"
+                                                          questionid="{{ question.id }}"> {{ question.question_text }}</label>
                             <input class="slider" id="criteria{{ forloop.counter }}" max="5" min="1"
                                    name="criteria{{ forloop.counter }}" step="1" type="range">
                             <div class="slider-labels" style="--list-length: 5;">
