--- a/mysite/myapp/templates/myapp/be_an_expert.html
+++ b/mysite/myapp/templates/myapp/be_an_expert.html
@@ -19,7 +19,6 @@
             Example
         </button>
     </div>
-    <i class="fa-regular fa-circle-info"></i>
     <div>
         <h2>The Worked-Out Examples in Progress:</h2>
     </div>
@@ -113,7 +112,7 @@
                 </tbody>
             </table>
         {% else %}
-            <p>No completed worked-out examples available</p>
+            <p class="center">No completed worked-out examples available</p>
         {% endif %}
         {#        <div class="center">#}
         {#            Page: <a href="#">1</a><span>, </span>#}
