--- a/mysite/myapp/static/myapp/style.css
+++ b/mysite/myapp/static/myapp/style.css
@@ -229,6 +229,20 @@ footer {
     /*background: white;*/
 }
 
+.notification {
+    display: none; /* Hidden by default */
+    position: fixed; /* Position relative to the viewport */
+    bottom: 1rem;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center both vertically and horizontally */
+    background-color: #FA7070;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000; /* Ensure it appears above other elements */
+    color: #8B322C;
+}
+
 /*Slider Parts Don't Change as i don't know if i can fix it*/
 .slider-container {
     width: 100%;
@@ -425,6 +439,7 @@ footer a {
     text-decoration: none;
     color: inherit;
 }
+
 /* Create workout example */
 /* Hide all sections with the class 'content-section' */
 .content-Section {
@@ -436,7 +451,7 @@ footer a {
     display: block;
 }
 
-#data{
+#data {
     font-size: 12pt;
     font-weight: bold;
 }
