--- a/mysite/myapp/static/myapp/style.css
+++ b/mysite/myapp/static/myapp/style.css
@@ -242,7 +242,11 @@ footer {
     z-index: 1000; /* Ensure it appears above other elements */
     color: #8B322C;
 }
-
+.solution-submission textarea{
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+}
 /*Slider Parts Don't Change as i don't know if i can fix it*/
 .slider-container {
     width: 100%;
@@ -454,4 +458,12 @@ footer a {
 #data {
     font-size: 12pt;
     font-weight: bold;
+}
+
+
+/**/
+.welcome p{
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 0;
 }
